--- a/Typesofpaintings.html
+++ b/Typesofpaintings.html
@@ -5,7 +5,7 @@
 		<title>
 			PAINTING
 		</title>
-	<link rel="stylesheet" href="style1.css">	
+	<link rel="stylesheet" type="text/css" href="style1.css">	
 	</head>
 	<body>
 		<h1><center><b><u>PAINTING</u></b></center></h1>
