--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -42,6 +42,18 @@ function difference(arr1,arr2) {
 
   var c = Math.max(...a3);
   console.log(c);
+	
+	var a4 = difference([3 ,6, 2, 4, 34, 65, 55,345],[2, 45, 41, 65]);
+  console.log("uncommon elements", a4);
+
+  var d = Math.max(...a4);
+  console.log("Largest value is: ", d);
+
+  var a5 = difference([1, 2, 3, 4, 5],[1, 2, 3, 4, 5, 6]);
+  console.log("uncommon elements", a5);
+
+  var e = Math.max(...a5);
+  console.log("Largest value is: ", e);
 
 </script>
 </body>
