--- a/javascript/jason/index.html
+++ b/javascript/jason/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
   </head>
 <body>
-  <h1 id="title">Jason</h1>
+  <h1 id="title">Json</h1>
   
   <p>
     <button>
