--- a/javascript/m2/indexm2.html
+++ b/javascript/m2/indexm2.html
@@ -16,11 +16,11 @@
   </p>
 <h3>Select one of the options</h3>
   </p>
- <input type="radio" id="true" onclick="true()">
-  <button onclick="true()">True</button>
+ <input type="radio" id="true" onclick="tru()">
+  <button onclick="tru()">True</button>
 
-  <input type="radio" id="false" onclick="false()">
-  <button onclick="false()">False</button>
+  <input type="radio" id="false" onclick="fals()">
+  <button onclick="fals()">False</button>
   
   <div id="content"></div>
   <div id="content1"></div>
