--- a/wp/index.html
+++ b/wp/index.html
@@ -11,6 +11,7 @@
   Enter Number: <input id="fname" type="text" name="fname"><br>
   <input type="button" value="Submit" id="btn"/>
   <div id="content"></div>
+  <div id="content1"></div>
 
 </body>
 </html>
