--- a/wp/index.html
+++ b/wp/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
   </head>
 <body>
-  <h1 id="title">WP M3 </h1>
+  <h1 id="title">DC Lab 5</h1>
   
   Enter Number: <input id="fname" type="text" name="fname"><br>
   <input type="button" value="Submit" id="btn"/>
